# turbo-asar

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_asar.c  benchmark_sha256.c
benchmarks/electron-comparison/: benchmark.js  package-lock.json  package.json
include/: defines.h  filesystem.h  glob.h  pickle.h  sha256.h  turbo_asar.h
src/: asar.c  filesystem.c  glob.c  main.c  pickle.c  sha256.c
tests/: test_asar.c  test_pickle.c  test_sha256.c
